--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.12",
     "astro": "^5.13.5",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
